# cnki-converter

./: .gitignore  .travis.yml  CNKI-Converter.spec  Dockerfile  README  README.md  README_en.md  aaa.py  about.py  build.sh  cli.py  converter.py  custom.py  demo.bib  demo.ris  demo.txt  demo_idble.ris  deploy_to_cos.py  drag_drop.py  icon.icns  main.py  main.spec  not.py  pyproject.toml  requirements.txt  setup.sh  thread.py  update.py  utils.py
yigesamo/: __init__.py  constant.py  converter.py  pyproject.toml  server.py
yigesamo/misc/: index.html
