[tool.poetry]
name = "yigesamo"
version = "0.1.0"
description = "A project to convert cnki ref to refman ref records."
authors = ["Mingshi <i@unoiou.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-multipart = "^0.0.5"
aiofiles = "^0.5.0"
arrow = "^0.15.6"
fastapi = "^0.54.2"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
serve = 'yigesamo.server:main'
cli = 'yigesamo.cli:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

