[tool.poetry]
name = "yigesamo"
version = "0.1.0"
description = "A project to convert cnki ref to refman ref records."
authors = ["Mingshi <i@unoiou.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
